# slam_solver

config/: ba_config.yaml  cam0_left.yaml  stereo.yaml
results/: 矩阵.txt
solver/: CMakeLists.txt  package.xml
solver/include/: costIMUFunction.h  costTwoFrameTwoCamFunction.h  costf_piror.h  costfunction.h  costoneframetwocamfunction.h  eigen_type.h  feature.h  integration_base.h  macro.h  motion.h  parameters.h  pose.h  slam_solver.h
solver/src/: motion.cpp  parameters.cpp  pose.cpp  slam_solver.cpp
solver/src/test/: hello.cpp  testStereoInertial.cpp  无标题文档
solver/src/test/input/: cam_pose_left.txt  cam_pose_right.txt  gauss.txt  imu_pose.txt  imu_pose_noise.txt  point.txt  point2.txt  pointMonoInertial.txt  pointStereoInertial.txt  pose.txt
solver/src/test/output/: gauss.txt  gaussMonoInertial.txt  gaussStereoInertial.txt  imuIntMonoInertial.txt  imuIntStereoInertial.txt  imuIntegrate.txt  imuNoiseIntStereoInertial.txt  optMono.txt  optMonoInertial.txt  optNoiseStereoInertial.txt  optStereoInertial.txt
